--- a/src/main/resources/templates/user/other-user-profile.html
+++ b/src/main/resources/templates/user/other-user-profile.html
@@ -108,6 +108,8 @@
     </section>
 </main>
 <div th:replace="~{index::footer}"></div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
 <script src="/static/assets/js/userDetail.js"></script>
 <script>
     document.getElementById('seeMoreBtn').addEventListener('click', function() {
