--- a/src/main/resources/templates/layout/group-post.html
+++ b/src/main/resources/templates/layout/group-post.html
@@ -148,10 +148,10 @@
                         <button class="nav-link active" onclick="getPosts()" id="newsfeed-tab"  data-bs-toggle="tab" data-bs-target="#newsfeedTab" type="button" role="tab" aria-controls="Newsfeed" aria-selected="true">Newsfeed</button>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link" onclick="getAllEventsForPost()" id="events-tab" data-bs-toggle="tab" data-bs-target="#eventsTab" type="button" role="tab" aria-controls="Events" aria-selected="false">Events</button>
+                        <button class="nav-link" onclick="getEvents()" id="events-tab" data-bs-toggle="tab" data-bs-target="#eventsTab" type="button" role="tab" aria-controls="Events" aria-selected="false">Events</button>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link" onclick="getAllPollPost()" id="polls-tab" data-bs-toggle="tab" data-bs-target="#pollsTab" type="button" role="tab" aria-controls="Polls" aria-selected="false">Polls</button>
+                        <button class="nav-link" onclick="getPolls()" id="polls-tab" data-bs-toggle="tab" data-bs-target="#pollsTab" type="button" role="tab" aria-controls="Polls" aria-selected="false">Polls</button>
                     </li>
                 </ul>
                 <div class="tab-content" id="myTabContent">
@@ -173,6 +173,8 @@
 <div th:replace="~{index::footer}"></div>
 <script>
 </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
 <script src="/static/assets/js/communityDetail.js"></script>
 </body>
 </html>
