--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1967,16 +1967,13 @@
             calendar.addEventSource(events);
         }
 
-        document.getElementById('addPolicyButton').addEventListener('click', function () {
-            console.log('Clicked Polick Buttonb');
-            const modal = document.getElementById('addPolicyModal');
-            modal.style.display = 'block';
-        });
+        // document.getElementById('addPolicyButton').addEventListener('click', function () {
+        //     console.log('Clicked Polick Buttonb');
+        //     const modal = document.getElementById('addPolicyModal');
+        //     modal.style.display = 'block';
+        // });
 
-        var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
-var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
-  return new bootstrap.Popover(popoverTriggerEl)
-})
+ 
     </script>
  
 
