--- a/src/main/resources/templates/user/user-profile.html
+++ b/src/main/resources/templates/user/user-profile.html
@@ -102,6 +102,9 @@
                                             <strong>Role:</strong> <span th:text="${user.role}?: 'Not provided'"></span>
                                         </p>
                                     </div>
+                                    <div id="hobbiesContainer">
+
+                                    </div>
                                 </div>
                             </div>
                             <div class="d-flex justify-content-between align-items-center mb-4">
@@ -889,6 +892,52 @@ document.addEventListener('DOMContentLoaded',() => {
         });
     });
 
+    const userHobbies = "running,reading,hiking,coding,drawing";
+
+
+    const hobbyIcons = {
+        "reading": "<i class='fas fa-book' style='color: #4a86e8;'></i>",
+        "hiking": "<i class='fas fa-hiking' style='color: #f6b26b;'></i>",
+        "cooking": "<i class='fas fa-utensils' style='color: #e55039;'></i>",
+        "gardening": "<i class='fas fa-seedling' style='color: #8bc34a;'></i>",
+        "writing": "<i class='fas fa-pen' style='color: #673ab7;'></i>",
+        "photography": "<i class='fas fa-camera' style='color: #9e9e9e;'></i>",
+        "coding": "<i class='fas fa-laptop-code' style='color: #607d8b;'></i>",
+        "drawing": "<i class='fas fa-draw-polygon' style='color: #ff9800;'></i>",
+        "swimming": "<i class='fas fa-swimmer' style='color: #00bcd4;'></i>",
+        "gaming": "<i class='fas fa-gamepad' style='color: #4caf50;'></i>",
+        "painting": "<i class='fas fa-paint-brush' style='color: #9c27b0;'></i>",
+        "traveling": "<i class='fas fa-globe-americas' style='color: #795548;'></i>",
+        "cycling": "<i class='fas fa-bicycle' style='color: #607d8b;'></i>",
+        "camping": "<i class='fas fa-campground' style='color: #ff9800;'></i>",
+        "fishing": "<i class='fas fa-fish' style='color: #00bcd4;'></i>",
+        "birdwatching": "<i class='fas fa-binoculars' style='color: #4caf50;'></i>",
+        "meditation": "<i class='fas fa-meditate' style='color: #9c27b0;'></i>",
+        "music": "<i class='fas fa-music' style='color: #795548;'></i>",
+        "jogging": "<i class='fas fa-running' style='color: #4a86e8;'></i>",
+        "sports": "<i class='fas fa-futbol' style='color: #f6b26b;'></i>",
+        "crafts": "<i class='fas fa-craft' style='color: #e55039;'></i>",
+        "sewing": "<i class='fas fa-scissors' style='color: #8bc34a;'></i>",
+        "crochet": "<i class='fas fa-crop' style='color: #673ab7;'></i>",
+        "acting": "<i class='fas fa-theater-masks' style='color: #9e9e9e;'></i>"
+    };
+
+
+    function displayHobbiesWithIcons(hobbiesString) {
+        const hobbies = hobbiesString.split(',');
+        let html = "";
+        hobbies.forEach(hobby => {
+            const icon = hobbyIcons[hobby];
+            if (icon) {
+                html += `<div>${icon} ${hobby}</div>`;
+            }
+        });
+        return html;
+    }
+
+
+    const hobbiesContainer = document.getElementById("hobbiesContainer");
+    hobbiesContainer.innerHTML = displayHobbiesWithIcons(userHobbies);
 </script>
 </body>
 </html>
