--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -459,8 +459,8 @@
                 </a>
                 <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
-                        <a href="charts-chartjs.html">
-                            <i class="bi bi-circle"></i><span>Chart.js</span>
+                        <a th:href="@{/record-list}">
+                            <i class="bi bi-circle"></i><span>record</span>
                         </a>
                     </li>
                     <li>
