--- a/src/main/resources/static/assets/css/loading.css
+++ b/src/main/resources/static/assets/css/loading.css
@@ -195,7 +195,7 @@ button {
 }
 
 .sa-icon.sa-success {
-    border-color: #4CAF50;
+    border-color: #51a6eb;
 }
 
 .sa-icon.sa-success::before, .sa-icon.sa-success::after {
@@ -236,7 +236,7 @@ button {
 .sa-icon.sa-success .sa-placeholder {
     width: 80px;
     height: 80px;
-    border: 4px solid rgba(76, 175, 80, .5);
+    border: 4px solid #68b5f5;
     -webkit-border-radius: 40px;
     border-radius: 40px;
     border-radius: 50%;
@@ -386,7 +386,7 @@ button {
 
 .sa-icon.sa-success .sa-line {
     height: 5px;
-    background-color: #4CAF50;
+    background-color:  #3192e0;;
     display: block;
     border-radius: 2px;
     position: absolute;
@@ -713,5 +713,33 @@ code {
     transform: skewX(45deg);
   }
   
-
  
+/* HTML: <div class="loader"></div> */
+.loader { 
+    margin-top: 40px;
+    margin-bottom: 40px;
+    margin-left: 77px;
+    width: 150px;
+    aspect-ratio: 1;
+    display: grid;
+    border: 12px solid #0000;
+    border-radius: 50%;
+    border-right-color: #3192e0;
+    animation: l15 1s infinite linear;
+  }
+  .loader::before,
+  .loader::after {    
+    content: "";
+    grid-area: 1/1;
+    margin: 6px;
+    border: inherit;
+    border-radius: 50%;
+    animation: l15 2s infinite;
+  }
+  .loader::after {
+    margin: 24px;
+    animation-duration: 3s;
+  }
+  @keyframes l15{ 
+    100%{transform: rotate(1turn)}
+  }
