--- a/src/main/resources/templates/user/user-chat.html
+++ b/src/main/resources/templates/user/user-chat.html
@@ -1,207 +1,3 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en" xmlns:th="http://www.thymeleaf.org/">-->
-<!--<head th:replace="~{index::head}">-->
-<!--    <meta charset="UTF-8">-->
-<!--    <title>Title</title>-->
-<!--&lt;!&ndash;    <script src="/static/assets/js/chatRoom.js"></script>&ndash;&gt;-->
-<!--&lt;!&ndash;        <link rel="stylesheet" type="text/css" th:href="@{/static/assets/css/chatRoom.css}">&ndash;&gt;-->
-<!--&lt;!&ndash;    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">&ndash;&gt;-->
-<!--&lt;!&ndash;    <link rel="stylesheet" type="text/css" th:href="@{/static/assets/css/chatRoom.css}">&ndash;&gt;-->
-<!--</head>-->
-<!--<body>-->
-<!--<div th:replace="~{index::header}"></div>-->
-<!--<div th:replace="~{index::navbar}"></div>-->
-<!--<main id="main" class="main" style="margin-top: -0px">-->
-<!--    <div class="chat-container " id="chat-page">-->
-<!--        <div class="users-list">-->
-<!--            <div class="users-list-container">-->
-<!--                <img src="/static/assets/img/DAT-logo.png" alt="">-->
-<!--                <ul id="connectedUsers">-->
-<!--                </ul>-->
-<!--            </div>-->
-<!--            <div>-->
-<!--                <p id="connected-user-fullname"></p>-->
-<!--            </div>-->
-<!--        </div>-->
-
-<!--        <div class="chat-area">-->
-<!--            <div class="chat-area" id="chat-messages">-->
-<!--            </div>-->
-<!--            <form id="messageForm" name="messageForm" class="hidden">-->
-<!--                <div class="message-input">-->
-<!--                    <input autocomplete="off" type="text" id="message" placeholder="Type your message..." rows="10">-->
-<!--                    <button>Send</button>-->
-<!--                </div>-->
-<!--            </form>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</main>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>-->
-<!--<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>-->
-<!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.2/emojionearea.js"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>-->
-<!--&lt;!&ndash;<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>&ndash;&gt;-->
-
-<!--<script>-->
-<!--    $(document).ready(function () {-->
-<!--        console.log('Initialize emoji pliguin')-->
-<!--        $('#message').emojioneArea({-->
-<!--            pickerPosition:'top'-->
-<!--        });-->
-<!--    });-->
-<!--    // var $j = jQuery.noConflict();-->
-<!--    // $j(document).ready(function() {-->
-<!--    //     console.log('Initialize emoji pliguin')-->
-<!--    //     $j('#message').emojioneArea({-->
-<!--    //         pickerPosition: 'top'-->
-<!--    //     });-->
-<!--    // });-->
-
-<!--</script>-->
-<!--&lt;!&ndash;<div th:replace="~{index::footer}"></div>&ndash;&gt;-->
-
-<!--</body>-->
-<!--</html>-->
-<!--<!DOCTYPE html>-->
-<!--<html lang="en" xmlns:th="http://www.thymeleaf.org/">-->
-<!--<head th:replace="~{index::head}">-->
-<!--    <meta charset="UTF-8">-->
-<!--    <title>Title</title>-->
-<!--    <link rel="stylesheet" type="text/css" th:href="@{/static/assets/css/chatRoom.css}">-->
-<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"-->
-<!--          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">-->
-<!--    <style>-->
-<!--        .dropdown-menu {-->
-<!--            background-color: transparent !important;-->
-<!--            border: none !important;-->
-<!--        }-->
-<!--        .dropdown-menu .dropdown-item {-->
-<!--            color: #000 !important;-->
-<!--        }-->
-<!--        .dropdown-toggle {-->
-<!--            background-color: transparent !important;-->
-<!--            border: none !important;-->
-<!--        }-->
-<!--    </style>-->
-<!--</head>-->
-<!--<body>-->
-<!--<div th:replace="~{index::header}"></div>-->
-<!--<div th:replace="~{index::navbar}"></div>-->
-<!--<main id="main" class="main" style="margin-top: -0px">-->
-<!--    <div class="chat-container " id="chat-page">-->
-<!--        <div class="users-list">-->
-<!--            <div class="users-list-container">-->
-<!--                <img src="/static/assets/img/DAT-logo.png" alt="" style="padding: 10px">-->
-<!--                <ul id="connectedUsers">-->
-<!--                </ul>-->
-<!--            </div>-->
-<!--            <div>-->
-<!--                <p id="connected-user-fullname"></p>-->
-<!--            </div>-->
-<!--        </div>-->
-
-<!--        <div class="chat-area">-->
-<!--            <div class="bar-above-messages">-->
-<!--                <div class="room-info-container">-->
-<!--                    <span id="group-photo-id"></span>-->
-<!--                    <span class="room-name" id="room-name">-->
-<!--         </span>-->
-<!--                </div>-->
-<!--                <i class="fa-solid fa-video" id="vd-icon" style="margin-right: 15px"></i>-->
-<!--                <div class="dropdown">-->
-<!--                    <i class="fa-solid fa-circle-info dropdown-toggle" id="dropdownMenuButton" data-bs-toggle="dropdown"-->
-<!--                       aria-expanded="false"></i>-->
-<!--                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">-->
-<!--                        <li><i class="fa-solid fa-user-minus" id="kick-room-member" data-bs-toggle="modal"-->
-<!--                               data-bs-target="#memberKickModal"></i></li>-->
-<!--                        <li><i class="fa-solid fa-user-plus" style="padding: 8px" data-bs-toggle="modal"-->
-<!--                               data-bs-target="#memberAddModal" id="get-all-member-list"></i></li>-->
-<!--                    </ul>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="chat-area" id="chat-messages">-->
-<!--            </div>-->
-<!--            <form id="messageForm" name="messageForm" class="hidden">-->
-<!--                <div class="message-input">-->
-<!--                    <input autocomplete="off" type="text" id="message" placeholder="Type your message..." rows="10">-->
-<!--                    <button style="margin-right: 30px; margin-top: -4px"><i class="fa-solid fa-paper-plane"></i>-->
-<!--                    </button>-->
-<!--                </div>-->
-<!--            </form>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</main>-->
-
-<!--<div class="modal fade" id="memberAddModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"-->
-<!--     aria-labelledby="staticBackdropLabel" aria-hidden="true">-->
-<!--    <div class="modal-dialog">-->
-<!--        <form id="get-all-user">-->
-<!--            <div class="modal-content">-->
-<!--                <div class="modal-header">-->
-<!--                    <h5 class="modal-title" id="staticBackdropLabel">Member's</h5>-->
-<!--                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
-<!--                </div>-->
-<!--                <div class="modal-body">-->
-<!--                    <input type="hidden" id="chat-room-id" name="id">-->
-<!--                    <div id="memberList">-->
-
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="modal-footer">-->
-<!--                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>-->
-<!--                    <button type="button" class="btn btn-primary" id="member-add-icon">Add</button>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </form>-->
-<!--    </div>-->
-<!--</div>-->
-
-
-<!--<div class="modal fade" id="memberKickModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"-->
-<!--     aria-labelledby="staticBackdropLabel" aria-hidden="true">-->
-<!--    <div class="modal-dialog">-->
-<!--        <form id="kick-room-user">-->
-<!--            <div class="modal-content">-->
-<!--                <div class="modal-header">-->
-<!--                    <h5 class="modal-title" id="staticLabelForKickMember">Member's</h5>-->
-<!--                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
-<!--                </div>-->
-<!--                <div class="modal-body">-->
-<!--                    <input type="hidden" id="kick-room-id" name="id">-->
-<!--                    <div id="memberListForKick">-->
-
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="modal-footer">-->
-<!--                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>-->
-<!--                    <button type="button" class="btn btn-primary" id="member-kick-icon">Kick</button>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </form>-->
-<!--    </div>-->
-<!--</div>-->
-<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"-->
-<!--        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"-->
-<!--        crossorigin="anonymous"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>-->
-<!--<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>-->
-<!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.2/emojionearea.js"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>-->
-<!--<script>-->
-<!--    var $j = jQuery.noConflict();-->
-<!--    $j(document).ready(function () {-->
-<!--        $j('#message').emojioneArea({-->
-<!--            pickerPosition: 'top'-->
-<!--        });-->
-<!--    });-->
-<!--</script>-->
-<!--&lt;!&ndash;<div th:replace="~{index::footer}"></div>&ndash;&gt;-->
-<!--</body>-->
-<!--</html>-->
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="~{index::head}">
@@ -242,7 +38,7 @@
         </div>
 
         <div class="chat-area">
-            <div class="bar-above-messages">
+            <div id="bar-above-messages" class="hidden">
                 <div class="room-info-container">
                     <span id="group-photo-id"></span>
                     <span class="room-name" id="room-name"></span>
@@ -256,7 +52,7 @@
                         <li><a href="#" data-bs-toggle="modal" data-bs-target="#memberAddModal" id="get-all-member-list"><i class="fa-solid fa-user-plus"></i>Add Member</a></li>
                     </ul>
                 </div>
-            </div>
+            </div><br>
             <div class="chat-area" id="chat-messages">
             </div>
             <div id="mentionSuggestions"></div>
